--- a/flask_app/app/templates/insurances/make_insurance.html
+++ b/flask_app/app/templates/insurances/make_insurance.html
@@ -2,30 +2,82 @@
 
 {% block title %}Register Insurance{% endblock %}
 
+{% block indexeddb %}
+{% if not current_user.is_authenticated %}
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const myForm = document.getElementById('insuranceForm');
+            const mySubmitButton = document.getElementById('submitButton');
+        
+            mySubmitButton.onclick = function(event) {
+                // Prevent the default form submission behavior
+                event.preventDefault();
+        
+                const request = indexedDB.open('bodovision', 1);
+        
+                request.onerror = function(event) {
+                    console.error('Error opening database:', event.target.error);
+                };
+        
+                request.onsuccess = function(event) {
+                    var db = event.target.result;
+                    var transaction = db.transaction(['insurance'], 'readwrite');
+                    var insuranceStore = transaction.objectStore('insurance');
+        
+                    // Add new data to the store
+                    var insuranceData = {
+                        label: document.getElementById('label').value,
+                        unit_type: document.getElementById('unit_type_id').selectedOptions[0].textContent,
+                        value: parseInt(document.getElementById('value').value),
+                        price: parseInt(document.getElementById('price').value),
+                        due_date: document.getElementById('due_date').value,
+                        company: document.getElementById('company_id').selectedOptions[0].textContent
+                    };
+        
+                    var addRequest = insuranceStore.add(insuranceData);
+        
+                    addRequest.onerror = function(event) {
+                        console.error('Error adding data:', event.target.error);
+                    };
+        
+                    addRequest.onsuccess = function(event) {
+                        // Redirect to insurances list page after successful addition
+                        window.location.href = '{{ url_for("insurances.insurances_list") }}';
+                    };
+                };
+            };
+        });
+        
+
+    </script>
+    {% endif %}
+{% endblock indexeddb %}
+
+
 {% block content %}
     <div class="container">
-        <h2>Register Insurance</h2>
-        <form method="POST" action="{{ url_for('.make_insurance') }}" class="mt-4">
+        <h2 class="text-center">Register Insurance</h2>
+        <form method="POST" action="{{ url_for('.make_insurance') }}" class="mt-4" id="insuranceForm">
             {{ form.hidden_tag() }}
             <div class="mb-3">
-                {{ form.label.label(class="form-label") | escape }}
-                {{ form.label(class="form-control", id="label") | escape }}
+                {{ form.label.label(class="form-label") }}
+                {{ form.label(class="form-control", id="label") }}
             </div>
             <div class="mb-3">
-                {{ form.unit_type_id.label(class="form-label") | escape }}
-                {{ form.unit_type_id(class="form-select", id="unit_type_id") | escape }}
+                {{ form.unit_type_id.label(class="form-label") }}
+                {{ form.unit_type_id(class="form-select", id="unit_type_id") }}
             </div>
             <div class="mb-3">
-                {{ form.value.label(class="form-label") | escape }}
-                {{ form.value(class="form-control", id="value") | escape }}
+                {{ form.value.label(class="form-label") }}
+                {{ form.value(class="form-control", id="value") }}
             </div>
             <div class="mb-3">
-                {{ form.price.label(class="form-label") | escape }}
-                {{ form.price(class="form-control", id="price") | escape }}
+                {{ form.price.label(class="form-label") }}
+                {{ form.price(class="form-control", id="price") }}
             </div>
             <div class="mb-3">
-                {{ form.due_date.label(class="form-label") | escape }}
-                {{ form.due_date(class="form-control", id="due_date") | escape }}
+                {{ form.due_date.label(class="form-label") }}
+                {{ form.due_date(class="form-control", id="due_date") }}
             </div>
             <div class="mb-3">
                 {{ form.company_id.label(class="form-label") }}
@@ -33,13 +85,11 @@
             </div>
             
             <div class="mb-3">
-                {{ form.submit(class="btn btn-primary") }}
+                {{ form.submit(class="btn btn-primary", id="submitButton") }}
             </div>
-
-
-
-            
-
         </form>
     </div>
+    
 {% endblock %}
+
+
