--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -9,7 +9,6 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
             <title>{% block title %}{% endblock title %}</title>
-            
         {% endblock head %}
     </head>
     <body>
@@ -99,14 +98,12 @@
         {% endblock footer %}
         </footer>
 
-
-        {% block indexeddb %}
-            <script src="{{ url_for('static', filename='indexeddb_setup.js') }}"></script>
-        {% endblock indexeddb %}
-
         {% block scripts %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         {% endblock scripts %}
+
+        {% block bootstrapjs %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        {% endblock bootstrapjs %}
     {% endblock body %}
     </body>
 </html>
