--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -98,6 +98,33 @@
         {% endblock footer %}
         </footer>
 
+        <script>
+            if ('indexedDB' in window) {
+                console.log('IndexedDB is supported.');
+              }
+            else {
+                console.log('IndexedDB is not supported.');
+            }
+
+            (async () => {
+
+                if (!navigator.storage) return;
+                
+                const
+                    required = 10, // 10 MB required
+                    estimate = await navigator.storage.estimate(),
+                
+                    // calculate remaining storage in MB
+                    available = Math.floor((estimate.quota - estimate.usage) / 1024 / 1024);
+                
+                if (available >= required) {
+                    console.log('Storage is available');
+                    // ...call functions to initialize IndexedDB
+                }
+                
+            })();
+        </script>
+        
         {% block indexeddb_setup %}
         <script src="{{ url_for('static', filename='js/indexeddb._setup.js') }}"></script>
         {% endblock indexeddb_setup %}
