--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -32,6 +32,9 @@
                                     <li class="nav-item">
                                         <a class="nav-link active" href="{{ url_for('settlements.settlement_list') }}">Settlements</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="{{ url_for('offers.offers_list') }}">Offers</a>
+                                    </li>
                                 </ul>
                                 <ul class="navbar-nav">
                                     {% if current_user.is_admin %}
