--- a/flask_app/app/templates/offers/offers_list.html
+++ b/flask_app/app/templates/offers/offers_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1 class="text-center">Offers</h1>
-    <div class="text-end">
+    <div class="text-end me-1">
         <a href="{{ url_for('offers.make_offer') }}" class="btn btn-primary">Register Offer</a>
     </div>
     <table class="table">
