--- a/flask_app/app/templates/insurances/make_insurance.html
+++ b/flask_app/app/templates/insurances/make_insurance.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Register Insurance{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
     <div class="container">
-        <h1 class="text-center">Register Insurance</h1>
+        <h1 class="text-center">{{ title }}</h1>
         <form method="POST" action="{{ url_for('.make_insurance') }}" class="mt-4">
             {{ form.hidden_tag() }}
             <div class="mb-3">
