--- a/flask_app/app/templates/offers/offers_list.html
+++ b/flask_app/app/templates/offers/offers_list.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}{{title}}{% endblock %}
+
 {% block content %}
-    <h1 class="text-center">Offers</h1>
+    <h1 class="text-center">{{title}}</h1>
     <div class="text-end me-1">
         <a href="{{ url_for('offers.make_offer') }}" class="btn btn-primary">Register Offer</a>
     </div>
