--- a/flask_app/app/templates/offers/register_offer.html
+++ b/flask_app/app/templates/offers/register_offer.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Register Offer{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
     <div class="container">
-        <h2>Register Offer</h2>
+        <h1 class="text-center">{{ title }}</h1>
         <form method="POST" action="{{ url_for('offers.make_offer') }}" class="mt-4">
             {{ form.hidden_tag() }}
             <div class="mb-3">
