--- a/flask_app/app/templates/settlements/make_settlement.html
+++ b/flask_app/app/templates/settlements/make_settlement.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Register Settlement{% endblock %}
+{% block title %}{{title}}{% endblock %}
 
 {% block content %}
     <div class="container">
-        <h2>Register Settlement</h2>
+        <h1 class="text-center">{{title}}</h1>
         <form method="POST" action="{{ url_for('.make_settlement') }}" class="mt-4">
             {{ form.hidden_tag() }}
 
